# render_study

./: CMakeLists.txt  Makefile  color.cpp  color.h  geometry.h  main.cpp  model.cpp  model.h  objparser.cpp  objparser.h  paintdevice.h  parser.h  renderer.cpp  renderer.h  result.tga  tgadevice.cpp  tgadevice.h  tgaimage.h  utils.h
swr/: CMakeLists.txt
swr/model/: model.cpp  model.h
swr/parser/: objparser.cpp  objparser.h  parser.h
swr/render/: renderer.cpp  renderer.h
swr/render/iodevice/: iodevice.h  tgadevice.cpp  tgadevice.h  tgaimage.h
swr/utils/: color.cpp  color.h  geometry.h  utils.h
